<resources>
    <string name="app_name">assignmentTwo_CondeLudena</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="register_for_an_account">Register for an account</string>
    <string name="movies_list">Movies List</string>
    <string name="title">Title: </string>
    <string name="studio">Studio:</string>
    <string name="rating">"Rating: "</string>
    <string name="year">"Year: "</string>
    <string name="details">"Details: "</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="movie_thumbnail">Movie Thumbnail</string>
    <string name="add_movie">Add Movie</string>
    <string name="add">Add</string>
    <string name="back_to_list">Back To List</string>
    <string name="image_link">Image Link:</string>
    <string name="empty">" "</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_image_link">Enter Image Link</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_rating">Enter Rating</string>
</resources>