<?xml version="1.0" encoding="utf-8"?>
<!--Emilio Sebastian Conde Ludena
200478144
July 31, 2025
7:00pm
Reused from assignment One https://github.com/esc358/assignmentOne_CondeLudena-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity"
    android:background="@color/ebe1c6">

    <!-- App Logo and Image and Text -->
    <LinearLayout
        android:id="@+id/imgAndMovieListLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_20dp"
        android:paddingBottom="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginStart="@dimen/_10dp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textMoviesListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/arimo"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAndMovieListLinearLayout"
        app:layout_constraintVertical_bias="0.13999999">


        <LinearLayout
            android:id="@+id/titleMovieLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:textSize="@dimen/_23sp"
                android:text="@string/title"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:fontFamily="@font/arimo"
                android:hint="@string/enter_title"
                android:textColorHint="@color/white"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"
                android:textSize="@dimen/_23sp"
                android:textColor="@color/black"
                tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ratingMovieLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:textSize="@dimen/_23sp"
                android:text="@string/rating"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:hint="@string/enter_rating"
                android:inputType="text"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"
                android:textSize="@dimen/_23sp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/yearMovieLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:textSize="@dimen/_23sp"
                android:text="@string/year"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:hint="@string/enter_year"
                android:inputType="text"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"
                android:textSize="@dimen/_23sp"
                android:textColorHint="@color/white"
                android:textColor="@color/black"
                tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageMovieLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:textSize="@dimen/_23sp"
                android:text="@string/image_link"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editImageLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arimo"
                android:inputType="textMultiLine"
                android:hint="@string/enter_image_link"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"
                android:gravity="top|start"
                android:textSize="@dimen/_23sp"
                android:textColorHint="@color/white"
                tools:ignore="Autofill,LabelFor,TextFields,VisualLintTextFieldSize"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_8dp"
                android:text="@string/add"
                android:textSize="@dimen/_23sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/backMoviesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:backgroundTint="#4F40D0"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_8dp"
                android:text="@string/back_to_list"
                android:textSize="@dimen/_23sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>