<?xml version="1.0" encoding="utf-8"?>
<!--Emilio Sebastian Conde Ludena
200478144
July 31, 2025
7:00pm
Reused from assignment One https://github.com/esc358/assignmentOne_CondeLudena-->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_300dp"
    app:cardCornerRadius="@dimen/_20dp"
    android:layout_marginHorizontal="@dimen/_14dp"
    android:layout_marginVertical="@dimen/_8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:background="@color/ebe1c6">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="@dimen/_12dp"
            android:rowCount="5">

            <!-- Row Title -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_gravity="center"
                android:contentDescription="@string/movie_thumbnail"
                tools:srcCompat="@tools:sample/avatars"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_4dp"
                android:text="@string/title"
                android:textSize="@dimen/_23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieTextName"
                android:layout_row="1"
                android:layout_column="1"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp" />

            <!-- Row Rating -->
            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_4dp"
                android:text="@string/rating"
                android:textSize="@dimen/_23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ratingTextName"
                android:layout_row="2"
                android:layout_column="1"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp" />

            <!-- Row Year -->
            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_4dp"
                android:text="@string/year"
                android:textSize="@dimen/_23sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yearTextName"
                android:layout_row="3"
                android:layout_column="1"
                android:fontFamily="@font/arimo"
                android:padding="@dimen/_4dp"
                android:textSize="@dimen/_23sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_row="4"
                android:layout_columnSpan="2">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:backgroundTint="#425483"
                    android:fontFamily="@font/arimo"
                    android:padding="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:text="@string/edit"
                    android:textSize="@dimen/_23sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:backgroundTint="#FF0303"
                    android:fontFamily="@font/arimo"
                    android:padding="@dimen/_8dp"
                    android:text="@string/delete"
                    android:textSize="@dimen/_23sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </GridLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>