<?xml version="1.0" encoding="utf-8"?>
<!--Emilio Sebastian Conde Ludena
200478144
July 31, 2025
7:00pm
Reused from assignment One https://github.com/esc358/assignmentOne_CondeLudena-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity">

    <!-- App Logo and Image and Text -->
    <LinearLayout
        android:id="@+id/imgAndMovieListLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_20dp"
        android:paddingBottom="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginStart="@dimen/_10dp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textMoviesListTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/arimo"
            android:text="@string/movies_list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_28sp"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:backgroundTint="@color/_6bca53"
        android:text="@string/add_movie"
        android:textSize="@dimen/_23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAndMovieListLinearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton"
        app:layout_constraintVertical_bias="0.060000002" />

</androidx.constraintlayout.widget.ConstraintLayout>